// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard renders standard card 1`] = `
<div
  className="container-block bCvgaG"
>
  <div
    className="jaAOfW"
  >
    <img
      alt="image"
      className="aoicY"
      src="http://localhost/img.png"
      title="image"
    />
    <div
      className="card-image__overlay eBbRRH"
    />
  </div>
</div>
`;

exports[`ImageCard renders type = half 1`] = `
<div
  className="bzLZlQ"
>
  <div
    className="container-block cNtBSX"
  >
    <img
      alt=""
      className="aoicY"
      src="http://localhost/img.png"
      title=""
    />
  </div>
  <div
    className="card-image__caption itGEoe"
  >
    <span
      className="kIGFlf"
    >
      <div
        className="text text--dark text--primary image-card__title--half kWGHae"
        disabled={false}
        size="hecto"
      >
        <span
          className="kIGFlf"
        >
          Title
        </span>
      </div>
    </span>
    <span
      className="hKrqSj"
    >
      <div
        className="text text--dark text--primary image-card__subtitle--half kWGHae"
        disabled={false}
        size="hecto"
      >
        <span
          className="hKrqSj"
        >
          Sub Title
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`ImageCard renders with additional content when \`cardTitle\` and \`cardSubtitle\` prop values are not provided (old API support) 1`] = `
<div
  className="container-block bCvgaG"
>
  <div
    className="jaAOfW"
  >
    <img
      alt=""
      className="aoicY"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="card-image__overlay eBbRRH"
    >
      <div
        className="card-image__caption ipWdGX"
      >
        <span
          className="kIGFlf"
        >
          Title
        </span>
        <span
          className="hKrqSj"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom image 1`] = `
<div
  className="container-block bCvgaG"
>
  <div
    className="jaAOfW"
  >
    <svg />
    <div
      className="card-image__overlay eBbRRH"
    >
      <div
        className="card-image__caption ipWdGX"
      >
        <span
          className="kIGFlf"
        >
          Title
        </span>
        <span
          className="hKrqSj"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom props 1`] = `
<div
  className="container-block bCvgaG"
>
  <div
    className="jaAOfW"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <img
      alt=""
      className="aoicY"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="card-image__overlay eBbRRH"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="card-image__caption ipWdGX"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <span
          className="kIGFlf"
        >
          Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle 1`] = `
<div
  className="container-block bCvgaG"
>
  <div
    className="jaAOfW"
  >
    <img
      alt=""
      className="aoicY"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="card-image__overlay eBbRRH"
    >
      <div
        className="card-image__caption ipWdGX"
      >
        <span
          className="kIGFlf"
        >
          Title
        </span>
        <span
          className="hKrqSj"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle, extra content 1`] = `
<div
  className="container-block bCvgaG"
>
  <div
    className="jaAOfW"
  >
    <img
      alt=""
      className="aoicY"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="card-image__overlay eBbRRH"
    >
      <div
        className="card-image__caption ipWdGX"
      >
        <span
          className="kIGFlf"
        >
          Title
        </span>
        <span
          className="hKrqSj"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;
